[tool.poetry]
name = "beanport"
version = "0.1.0"
description = "Beancount importer extension"
authors = ["jlwhelan28 <jlwhelan28@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beancount = "^2.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
